# mcu-manager

./: .gitmodules  Cargo.toml
.github/workflows/: build.yml  lint.yml  release.yml  rust.yml
mcu-lib/: Cargo.toml
mcu-lib/src/: lib.rs  msg_id.rs  os.rs
src/: main.rs
