[package]
name = "mcu-lib"
version = "0.1.0"
authors = ["Opal Symes <code@opal.codes>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.4"
num-derive = "0.2"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.1"
thiserror = "1.0"
